K8s/pythonpod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: leaf-ml
  namespace: resume-prod
spec:
  selector:
    matchLabels:
      app: leaf-ml
  replicas: 1
  template: # template for the pods
    metadata:
      labels:
        app: leaf-ml
    spec:
      nodeSelector:
        cloud.google.com/gke-accelerator: nvidia-tesla-t4
      containers:
        - name: leaf-ml
          imagePullPolicy: Always
          image: szheng3/sz-leaf-ml:latest
#          image: ishaterdal/streamlit_app_docker
          ports:
            - containerPort: 8501

#          env:
#            - name: SPRING_ZIPKIN_BASEURL
#              value: zipkin.istio-system.svc.cluster.local:9411
#          readinessProbe:
#            httpGet:
#              path: /actuator/health/readiness
#              port: 8501
#            initialDelaySeconds: 60
#            timeoutSeconds: 5
#          livenessProbe:
#            httpGet:
#              path: /actuator/health/liveness
#              port: 8501
#            initialDelaySeconds: 130
#            timeoutSeconds: 10
#            failureThreshold: 10
          resources:
            limits:
              nvidia.com/gpu: "1"
            requests:
              ephemeral-storage: 10Gi
              cpu: 1250m
              memory: 10Gi
#      imagePullSecrets:
#        - name: regcred
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: cloud.google.com/gke-spot
                    operator: In
                    values:
                      - "true"
#      affinity:
#        podAntiAffinity:
#          requiredDuringSchedulingIgnoredDuringExecution:
#            - topologyKey: kubernetes.io/hostname
#              labelSelector:
#                matchExpressions:
#                - key: app
#                  operator: In
#                  values:
#                    - leaf-ml
#          preferredDuringSchedulingIgnoredDuringExecution:
#            - weight: 1
#              podAffinityTerm:
#                topologyKey: kubernetes.io/hostname
#                labelSelector:
#                  matchExpressions:
#                    - key: app
#                      operator: In
#                      values:
#                        - leaf-ml

---
apiVersion: v1
kind: Service
metadata:
  name: leaf-ml
  namespace: resume-prod
spec:
  # This defines which pods are going to be represented by this Service
  # The service becomes a network endpoint for either other services
  # or maybe external users to connect to (eg browser)
  selector:
    app: leaf-ml

  ports:
    - name: http
      port: 80
      targetPort: 8501
  type: ClusterIP
